# Morion_test_task

./: .gitignore  README.md
Project/: CMakeLists.txt  Project.sln
Project/Project/: CConfig.h  CConfigSection.cpp  CConfigSection.h  CFileConfig.h  Project.vcxproj  Project.vcxproj.filters  main.cpp
Project/Project/Debug/: Project.exe.recipe  Project.ilk  vc142.idb
Project/Project/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project/include/my_lib/: CConfig.h  CFileConfig.h
Project/src/: Project.vcxproj  Project.vcxproj.filters  main.cpp
Project/src/Debug/: Project.ilk  vc142.idb
Project/src/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project/src/my_lib/: CFileConfig.cpp
